syntax = "proto3";

option java_package = "br.com.gmfonseca.tcc.proto";

service AlgorithmExecutorService {
  rpc ExecuteAlgorithm(ExecuteAlgorithmRequest) returns (ExecuteAlgorithmResult) {}
}

message ExecuteAlgorithmRequest {
  Method method = 1;
  DataType dataType = 2;
  oneof data {
    IntegerList integerList = 3;
    FloatList floatList = 4;
    ObjectList objectList = 5;
  }
}

message ExecuteAlgorithmResult {
  oneof data {
    IntegerList integerList = 1;
    FloatList floatList = 2;
    ObjectList objectList = 3;
  }
}

enum Method {
  BUBBLE_SORT = 0;
  SELECTION_SORT = 1;
  HEAP_SORT = 2;
}

enum DataType {
  INTEGER = 0;
  FLOAT = 1;
  OBJECT = 2;
}

message IntegerList {
  repeated int32 content = 1;
}

message FloatList {
  repeated float content = 1;
}

message ObjectList {
  repeated AnObject content = 1;
}

message AnObject {
  UUID uuid = 1;
  int32 intNumber = 2;
  float floatNumber = 3;
}

message UUID {
  int64 mostSigBits = 1;
  int64 leastSigBits = 2;
}